--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,39 +9,39 @@ on:
       - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  # build:
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+  #   - name: Login to Docker Hub
+  #     uses: docker/login-action@v2
+  #     with:
+  #       username: ${{ secrets.DOCKER_HUB_USERNAME }}
+  #       password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - name: Build and push client Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./Client
-        push: true
-        tags: manish181623/ci-cd_pipeline_client:latest
+  #   - name: Build and push client Docker image
+  #     uses: docker/build-push-action@v5
+  #     with:
+  #       context: ./Client
+  #       push: true
+  #       tags: manish181623/ci-cd_pipeline_client:latest
         
-    - name: Build and push server Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./Server
-        push: true
-        tags: manish181623/ci-cd_pipeline_server:latest
+  #   - name: Build and push server Docker image
+  #     uses: docker/build-push-action@v5
+  #     with:
+  #       context: ./Server
+  #       push: true
+  #       tags: manish181623/ci-cd_pipeline_server:latest
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    # needs: build
 
     steps:
     - name: Checkout code
@@ -56,7 +56,7 @@ jobs:
 
     - name: Deploy application
       run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} <<EOF
+        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << EOF
           cd ${{ secrets.WORKDIR }}
           git pull
           docker-compose up -d
