--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,6 @@ services:
       MYSQL_ROOT_PASSWORD: admin
     ports:
       - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
     networks:
       - java-network
 
@@ -46,3 +44,6 @@ services:
     image: manish181623/ci-cd_pipeline_client:latest
     ports:
       - "8089:80"
+  networks:
+    java-network:
+      driver: bridge
